<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SmokeControlParameters" Id="{006331c9-eeba-45a1-91ab-17ad59f5dd21}">
    <Declaration><![CDATA[TYPE SmokeControlParameters :
STRUCT
	MidiSmoke: MidiSmokeParameters;
	SxDuo: SxDuoParameters;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>