<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="SxDuo" Id="{4cb84e5e-c02e-41d2-853c-6427b6e8aeeb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK SxDuo
VAR_INPUT
	EN: BOOL;
	FireAlarm: BOOL;
	Damper1Alarm: BOOL;
	Exercising: BOOL;
	Damper2Alarm: BOOL;
	Damper1Open: BOOL;
	Damper1Closed: BOOL;
	Damper2Open: BOOL;
	Damper2Closed: BOOL;
	ServiceAlarm: BOOL;
END_VAR
VAR_OUTPUT
	ENO: BOOL;
	FireAlarmOut: bool;
	ActivateFireAlarm: BOOL;
	ResetSmokeDetector: BOOL;
	ForceExercise: BOOL;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ENO := EN;
IF EN THEN
	FireAlarmOut := FireAlarm;	
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="SxDuo">
      <LineId Id="38" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>